Bug 1844745 Block content overlaps content chooser in mobile view
Fix gives z-index to the content chooser so it float over the
content, and when collapsed it will sticky float to the left of
the window.

behatnotneeded

--- a/htdocs/theme/raw/sass/_custom.scss
+++ b/htdocs/theme/raw/sass/_custom.scss
@@ -854,6 +854,17 @@ div.form-group .form-control-label {
     position: -webkit-sticky;
     position: sticky;
     top: 200px;
+    z-index: $zindex-sticky;
+}
+@include media-breakpoint-down(sm) {
+    .view-container {
+        &.col-collapsed {
+            #editcontent-sidebar-wrapper {
+                width: 80px;
+                padding-left: 0;
+            }
+        }
+    }
 }
 
 a.online-users {
